--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "braintree-web": "2.32.1",
     "fs": "^0.0.1-security",
     "fsevents": "^2.1.2",
     "jquery": "^3.5.0",
@@ -51,6 +52,7 @@
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-square-payment-form": "^0.7.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   }
